Small fixes, better validation (only langid server is missing)
Validation now includes:
- disallowed characters
- text too short

--- a/alex/tools/crowdflower/nlg_job/CFJOB-reply.css
+++ b/alex/tools/crowdflower/nlg_job/CFJOB-reply.css
@@ -16,11 +16,11 @@
 }
 
 
-strong.confirm {
+strong.confirm, strong.confirm-example {
   color: orange;
 }
 
-strong.reply {
+strong.reply, strong.reply-example {
   color: #0a0;
 }
 
